refactor signup and login logic
